Renew Footer and add project date. Fix overflowing issue (#5)

--- a/src/components/CardItem/styles.module.scss
+++ b/src/components/CardItem/styles.module.scss
@@ -1,25 +1,40 @@
 .container {
   position: relative;
   composes: box from global;
+
+  & img {
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25);
+  }
 }
 .tagSection {
   margin-top: 1rem;
 }
-.head {
-  margin-bottom: 1.5rem;
+.hasFlexShrink {
+  flex-shrink: 1 !important;
 }
 .titleContainer {
-  margin-left: 1rem;
   flex-shrink: 1 !important;
-  align-items: center;
-  flex-wrap: wrap;
-
   & > * {
     flex-shrink: 1 !important;
-    margin-bottom: 0.5rem !important;
+  }
+  & p {
+    margin-bottom: 0.5rem;
   }
 }
+.titleContainer {
+  @media only screen and (max-width: 600px) {
+    align-items: center;
+    text-align: center;
 
+    & > div {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+  display: flex;
+  flex-direction: column;
+}
 .company {
-  margin-left: 1rem !important;
+  composes: has-text-weight-semibold from global;
+  margin-right: 0.5rem;
 }
